cli/tests/testdata/error_missing_module_named_import.ts.out
[WILDCARD]
error: Cannot load module "file://[WILDCARD]/does_not_exist.js".
    at file://[WILDCARD]/error_missing_module_named_import.ts:1:19
