cli/tests/testdata/error_missing_module_named_import.ts
import { a } from "./does_not_exist.js";

console.log(a);
